2003-04-09  Shawn Betts  <sabetts@sfu.ca>

	* nethack.el (nethack-el-version): version update

2003-04-03  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys.el (nh-map-mode-map): Don't map M-[.

2003-03-28  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* INSTALL: Update nethack version references (to 3.4.1).

	* nethack-api.el: No longer require overlay.  Require
	nethack-compat.

	* nethack-compat.el: Add file.  Localize version specific hacks
	here.

	* nethack.el (nh-propertize):
	(nh-assq-delete-all):
	(nh-window-buffer-height):
	(nh-char-to-int):
	(nh-read-char): Move these functions to nethack-compat.el.

	* Makefile (clean): Clean *.elc not *elc.

2003-03-10  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* enh-341.patch: Update file (was added without ChangeLog entry).

	* Makefile (NH_VER): Add variable to specify nethack source
	version to create patch from.

	* mkpatch: Update to use NH_VER.

2003-03-08  Shawn Betts  <sabetts@sfu.ca>

	* nethack-api.el (nh-menu-submit): Don't print the list of
	selected menu items to the minibuffer.

2002-09-26  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nh-sentinel): Don't pop to process buffer on signal.

	* nethack-api.el (nhapi-create-message-window): Erase the buffer.
	(nhapi-block): Clear the message highlight after input.
	(nhapi-raw-print): Pop to the raw-print-buffer.

2002-09-20  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-el-version): Add function.
	(nethack-el-version): Add variable.

	* nethack-cmd.el (version): Show nethack-el version.

	* nethack-example.el (nethack-x-timestamp-message): Rename from
	`nethack-timestamp-message'.
	(nethack-x-gdb): Rename from `nh-gdb'.
	(nethack-x-warn-low-hp): Add function.

	* nethack-api.el (nh-status-string): Add function.
	(nh-status-n, nh-status-w, nh-status-s, nh-status-d, nh-status-c) 
	(nh-status-i, nh-status-W, nh-status-C, nh-status-A, nh-status-L) 
	(nh-status-l, nh-status-g, nh-status-h, nh-status-p, nh-status-a) 
	(nh-status-e, nh-status-t, nh-status-f): Add functions.