@@ -4,7 +4,7 @@
 
 ;; Author: Ryan Yeske
 ;; Created: Sat Mar 18 11:24:02 2000
-;; Version: $Id: nethack-api.el,v 1.83 2003/03/09 04:25:28 sabetts Exp $
+;; Version: $Id: nethack-api.el,v 1.84 2003/03/29 07:01:26 rcyeske Exp $
 ;; Keywords: games
 
 ;; This file is free software; you can redistribute it and/or modify
@@ -511,7 +511,9 @@ The TYPE argument is legacy and serves no real purpose."
 	      (dotimes (j nh-map-width)
 		(insert-image nh-empty-tile))
 	      (insert (propertize "\n" 'face 'nethack-map-tile-face))))
-	(gamegrid-init (make-vector 256 nil))
+	(setq gamegrid-use-glyphs nil)	; dont try to use gamegrid glyphs
+	(let (cursor-type)		; protect from gamegrid-init clobbering
+	  (gamegrid-init (make-vector 256 nil)))
 	(gamegrid-init-buffer nh-map-width
 			      nh-map-height
 			      ? )))))
